# backend/internal/db/models/models.go
@@ -1,0 +1,13 @@
+package models
+
+var All = []any{
+	&User{},
+	&Project{},
+	&Issue{},
+	&Document{},
+	&ApprovalProcess{},
+	&ProcessStep{},
+	&Decision{},
+	&Signature{},
+	&ReviewComment{},
+}
